<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <RadioButton
        android:id="@+id/rbPaperMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode_paper"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/line_horizontal"
        android:contentDescription="@string/app_name" />

    <RadioButton
        android:id="@+id/rbSlideMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode_slide"
        android:checked="true"
        android:textSize="20sp"
        android:textStyle="bold" />

</RadioGroup>